<resources>
    <string name="app_name">MiniHos</string>

    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>

    <string name="message_login">若没有注册过账号，请先点击"注册"按钮~</string>
    <string name="message_register">点击“确认注册”按钮，即表示同意注册协议~</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">姓名</string>
    <string name="nav_header_subtitle1">病患数：0</string>
    <string name="nav_header_subtitle2">收藏：0</string>
    <string name="nav_header_subtitle3">订单: 0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>


    <string name="title_home">主页</string>
    <string name="title_like">收藏</string>
    <string name="title_order">挂号信息</string>
    <string name="title_message">消息</string>
    <string name="title_forum">论坛</string>

</resources>
