<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_bottom_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/ic_menu_bottom_like"
        android:title="@string/title_like" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_menu_bottom_order"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_menu_bottom_bell"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_menu_bottom_forum"
        android:title="@string/title_forum" />

</menu>
