<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/hospic"
                android:scaleType="fitCenter"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_log_phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/login_user_32px"
                    android:background="@drawable/bg_logintext"
                    android:hint="@string/prompt_email"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawablePadding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/et_log_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/login_password_32px"
                    android:background="@drawable/bg_logintext"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />

            </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <CheckBox
                android:id="@+id/cb_login_remenber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:textColor="#999999"
                android:button="@drawable/bg_checkbox"/>

            <CheckBox
                android:id="@+id/cb_login_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="自动登录"
                android:textSize="20sp"
                android:layout_marginLeft="80dp"
                android:textColor="#999999"
                android:button="@drawable/bg_checkbox"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">



                <Button
                    android:id="@+id/btn_register"
                    style="?android:textAppearanceSmall"
                    android:layout_width="155dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/action_register"
                    android:textStyle="bold"
                    android:background="@drawable/bg_btn_holy_pink"
                    android:textColor="#FF69B4"
                    />

                <Button
                    android:id="@+id/btn_login"
                    style="?android:textAppearanceSmall"
                    android:layout_width="155dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:background="@drawable/bg_btn_full_pink"
                    android:layout_marginLeft="20dp"
                    android:textColor="#ffff"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_login"
                android:layout_marginTop="10dp"
                android:gravity="center"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>